# npr-demo

./: Cargo.toml  README.md
assets/: model_animation.ron  sphere_animation.ron
assets/jellyfish/source/: Box-jelly.7z
assets/prefabs/: model_animation.ron  scene.ron
assets/puffy/: puffy.gltf
assets/shaders/: custom.frag  custom.vert  outline.frag  outline.frag.spv  outline.vert
src/: custom_render.rs  custom_render_old.rs  lib.rs  main.rs
