[package]
name = "npr_app"
version = "0.1.0"
authors = ["avinella <avinella@g.hmc.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
amethyst = {version = "0.15.3", features = ["vulkan"]}
amethyst_gltf = "0.15.3"
serde = "1.0.130"